k8s/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lcc
spec:
  selector:
    app: lcc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
