k8s/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/issue-temporary-certificate: "true"
  labels:
  name: lcc
  namespace: lcc
spec:
  ingressClassName: public
  rules:
  - host: londoncricketclub.ca
    http:
      paths:
      - backend:
          service:
            name: lcc
            port:
                    number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - londoncricketclub.ca
    secretName: lcc-tls
